--- a/canary.html
+++ b/canary.html
@@ -26,11 +26,13 @@
     <main>
         <h1>
             <!-- Bird name here -->
+            Canary
         </h1>
         <!-- Description of bird -->
+        Yellow Bird
         <div>
-            <!-- Image of bird -->
-            <!-- Audio of bird -->
+            <!-- Image of bird --> <img src="./assets/images/canary.jpg" alt="Canary">
+            <!-- Audio of bird --> <audio src="./assets/sounds/canary.mp3"></audio>
             <div>
                 <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Canary_(Serinus_canaria)_01.jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/14-Canary-Singing.html">SoundBible</a></h4>
             </div>
